--- a/ckanext/odm_laws/templates/package/read_base.html
+++ b/ckanext/odm_laws/templates/package/read_base.html
@@ -2,7 +2,7 @@
 
 {% block content_action %}
   {% if h.check_access('package_update', {'id':pkg.id }) %}
-    {% if dataset_type == 'laws_record' %}
+    {% if pkg.type == 'laws_record' %}
       {% link_for _('Manage'), controller='package', type='laws_record', action='edit', id=pkg.name, class_='btn', icon='wrench' %}
     {% else %}
       {{super()}}
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content_primary_nav %}
-	{% if dataset_type == 'laws_record' %}
+	{% if pkg.type == 'laws_record' %}
 		{{ h.build_nav_icon('odm_laws_read', _('Law'), id=pkg.name) }}
 		{{ h.build_nav_icon('dataset_activity', _('Activity Stream'), id=pkg.name) }}
 		{{ h.build_nav_icon('related_list', _('Related'), id=pkg.name) }}
@@ -22,7 +22,7 @@
 
 {% block secondary_content %}
 
-	{% if dataset_type == 'laws_record' and c.userobj %}
+	{% if pkg.type == 'laws_record' and c.userobj %}
 		{% set missing_laws = h.odm_laws_validate_fields(pkg) %}
 		{% if missing_laws["package"] or missing_laws["resources"] %}
 			{% block inconsistency_disclaimer_laws %}
@@ -35,7 +35,7 @@
 		{% endif %}
 	{% endif %}
 
-	{% if dataset_type == 'laws_record' %}
+	{% if pkg.type == 'laws_record' %}
 		{% block odm_laws_pdf_thumbnail %}
 			{% set resources = c.pkg_dict.resources %}
 			{% for resource in resources%}
