--- a/ckanext/odm_laws/templates/package/snippets/search_form.html
+++ b/ckanext/odm_laws/templates/package/snippets/search_form.html
@@ -1,6 +1,6 @@
 {% ckan_extends %}
 
-	{% if dataset_type == 'laws_record' %}
+	{% if pkg.type == 'laws_record' %}
 		{% set placeholder = placeholder if placeholder else _('Search Laws...') %}
 	{% else %}
 		{{super()}}
