--- a/ckanext/odm_laws/templates/package/edit_base.html
+++ b/ckanext/odm_laws/templates/package/edit_base.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block content_action %}
-	{% if pkg.type == 'laws_record' %}
+	{% if dataset_type == 'laws_record' %}
 		{% link_for _('View Law'), controller='package', type='laws_record', action='read', id=pkg.name, class_='btn', icon='eye-open' %}
 	{% else %}
 		{{super()}}
