--- a/ckanext/odm_laws/templates/package/snippets/new_package_breadcrumb.html
+++ b/ckanext/odm_laws/templates/package/snippets/new_package_breadcrumb.html
@@ -1,6 +1,6 @@
 {% ckan_extends %}
 
-{% if pkg.type == 'laws_record' %}
+{% if dataset_type == 'laws_record' %}
 	<li>{% link_for _('Law'), controller='package', type='laws_record', action='search', highlight_actions = 'new index' %}</li>
 	<li class="active">{% link_for _('Create Law'), controller='package', type='laws_record', action='new' %}</li>
 {% else %}
