--- a/ckanext/odm_laws/templates/package/snippets/stages.html
+++ b/ckanext/odm_laws/templates/package/snippets/stages.html
@@ -1,6 +1,6 @@
 {% ckan_extends %}
 
-{% if pkg.type == 'laws_record' %}
+{% if dataset_type == 'laws_record' %}
 <ol class="stages {{ class }}">
 	<li class="first {{ s1 }}">
 		{% if s1 != 'complete' %}
