--- a/ckanext/odm_laws/templates/package/new.html
+++ b/ckanext/odm_laws/templates/package/new.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block subtitle %}
-	{% if pkg.type == 'laws_record' %}
+	{% if dataset_type == 'laws_record' %}
 		{{ _('Create Law') }}
 	{% else %}
 		{{ super() }}
