--- a/ckanext/odm_laws/templates/package/search.html
+++ b/ckanext/odm_laws/templates/package/search.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block subtitle %}
-	{% if pkg.type == 'laws_record' %}
+	{% if dataset_type == 'laws_record' %}
 		{{ _("Laws") }}
 	{% else %}
 		{{super()}}
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumb_content %}
-	{% if pkg.type == 'laws_record' %}
+	{% if dataset_type == 'laws_record' %}
 		<li class="active">{{ h.nav_link(_('Laws'), controller='package', type='laws_record', action='search', highlight_actions = 'new index') }}</li>
 	{% else %}
 		{{super()}}
@@ -19,7 +19,7 @@
 {% block page_primary_action %}
   {% if h.check_access('package_create') %}
 		<div class="page_primary_action">
-			{% if pkg.type == 'laws_record' %}
+			{% if dataset_type == 'laws_record' %}
 				{% link_for _('Add Law'), controller='package', type='laws_record', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
 			{% else %}
 				{{super()}}
